<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Now You Drink</string>
    <string name="title_groups">Groups</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_friends">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty_groups_label">You aren\'t in any Groups!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="hometown_hint">Hometown(Optional)</string>
    <string name="website_hint">Website(Optional)</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button Divider</string>
    <string name="login_error_title">Error</string>
    <string name="login_error_message">Please make sure you enter a username and password.</string>
    <string name="signup_error_title">Error</string>
    <string name="signup_error_message">Please make sure you enter a username, password, email address, and first and last name.</string>
    <string name="menu_logout_label">Logout</string>
    <string name="menu_create_group_label">Create Group</string>
    <string name="menu_profile_label">Profile</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="reset_password_button_label">RESET PASSWORD</string>
    <string name="forgot_password_error_message">Please make sure you enter a valid email.</string>
    <string name="forgot_password_success_title">Success!</string>
    <string name="forgot_password_success_message">An email was successfully sent to the address entered. Please follow the instructions in the email to reset your password.</string>
    <string name="menu_edit_friends">Add Friends</string>
    <string name="title_activity_personal_profile">PersonalProfileActivity</string>
    <string name="empty_friends_label">Add Friends to Begin!</string>
    <string name="content_desc_user_avatar">User Avatar</string>
    <string name="content_desc_user_checkmark">User Checkmark</string>
    <string name="empty_inbox_label">You don\'t have any messages!</string>
    <string name="title_user_profile">Profile</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="title_edit_friends">Add Friends</string>
    <string name="error_title">We\'re Sorry!</string>
    <string name="content_desc_message_icon">Message Icon</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="menu_send_label">Send</string>
    <string name="error_friend_request">There was an error. Please Try Again.</string>
    <string name="success_message_friend_request">Friend Request(s) Sent!</string>
    <string name="error_sending_friend_request">There was an error sending your friend request. Please try again.</string>
    <string name="error_selecting_file_title">Sorry!</string>
    <string name="title_activity_view_friend_request">ViewFriendRequestActivity</string>
    <string name="title_friend_request">Friend Request</string>
    <string name="accept_button_label">Accept</string>
    <string name="reject_button_label">Reject</string>
    <string name="success_message_accept_request">Friend Request Accepted!</string>
    <string name="success_message_reject_request">Friend Request Rejected!</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="group_title_text">Group Title</string>
    <string name="group_title_hint">Group Title</string>
    <string name="select_friends_text">Select Friends</string>
    <string name="empty_friends_label_2">You have no Friends!</string>
    <string name="create_group_button_label">Create Group</string>
    <string name="title_activity_group">Groups</string>
    <string name="create_group_error_message">Please make sure you enter a group name.</string>
    <string name="error_creating_group">There was an error creating your group. Please try again.</string>
    <string name="success_message_group_create">Group Created!</string>
    <string name="title_activity_group_request">Group Request</string>
    <string name="group_current_drinker_title">Current Drinker</string>
    <string name="group_previous_drinker_title">Previous Drinker</string>
    <string name="group_drink_button_text">Now You Drink!</string>
    <string name="group_members_list_title">Group Members</string>
    <string name="now_you_drink_message">You\'re up! Take a drink and select a friend to go next!</string>
    <string name="now_you_drink_title">Take a drink!</string>
    <string name="group_bad_selection_message">Make sure you select a friend that isn\'t the previous drinker or isn\'t yourself.</string>
    <string name="group_bad_selection_title">Oops!</string>
    <string name="message_success_drink_request">Drink request sent!</string>
    <string name="error_message_title">Error</string>
    <string name="message_drink_request_error">There was an error sending the drink request. Please try again.</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_remove_members">Add Members</string>
    <string name="action_leave_group">Leave Group</string>
    <string name="action_delete_group">Delete Group</string>
    <string name="message_delete_group">Are you sure you want to delete this group?</string>
    <string name="message_title_delete_group">Delete Group</string>
    <string name="delete">Delete</string>
    <string name="title_activity_edit_members">Add Members</string>
    <string name="success_group_request">Group Request Sent!</string>
    <string name="message_admin_leave_group">You are the group Admin, Leaving the group will also delete the group. Continue?</string>
    <string name="current_drinker_leaving_dialog">You are the current drinker. Please select a new drinker before leaving.</string>
    <string name="message_title_leave_group">Leave Group</string>
    <string name="message_leave_group">Are you sure you want to leave the group?</string>
    <string name="message_title_nonexistent_group">Nonexistent Group</string>
    <string name="message_nonexistent_group">This group no longer exists.</string>
    <string name="desc_background_image">Background Image</string>
    <string name="search_friends_hint">Search for Friends</string>
    <string name="group_adapter_subtitle">Click to Drink!</string>
    <string name="drink_request_message">Now You Drink!</string>
    <string name="friend_request_message">You have a friend request!</string>
    <string name="alert_standard_error_message">There was an error processing your request. Please try again.</string>
    <string name="push_drink_request_message">Now you drink!</string>
    <string name="search_button_text">Search</string>
    <string name="desc_profile_picture">profile picture</string>
    <string name="login_forgot_password_text">Forgot Password?</string>

</resources>
