<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_logout"
        android:title="@string/menu_logout_label"
        android:orderInCategory="400"
        android:showAsAction="never" />
    <item android:id="@+id/action_create_group"
        android:title="@string/menu_create_group_label"
        android:orderInCategory="200"
        android:showAsAction="never" />
    <item android:id="@+id/action_profile"
        android:title="@string/menu_profile_label"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_edit_friends"
        android:title="@string/menu_edit_friends"
        android:orderInCategory="300"
        android:showAsAction="never" />
</menu>
