<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.richluick.nowyoudrink.ui.activities.GroupActivity" >

    <item android:id="@+id/action_edit_members"
        android:title="@string/action_add_remove_members"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_leave_group"
        android:title="@string/action_leave_group"
        android:orderInCategory="200"
        android:showAsAction="never" />

    <item android:id="@+id/action_delete_group"
        android:title="@string/action_delete_group"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:visible="false" />

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:visible="true"/>

</menu>
