<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.richluick.nowyoudrink.CreateGroupActivity">

    <TextView
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/groupTitleHeader"
        android:text="@string/group_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/groupTitleField"
        android:hint="@string/group_title_hint"
        android:layout_below="@+id/groupTitleHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/selectFriendsHeader"
        android:text="@string/select_friends_text"
        android:layout_below="@+id/groupTitleField"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@android:id/empty"
        android:layout_below="@+id/selectFriendsHeader"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_friends_label_2"/>

    <ListView
        android:id="@android:id/list"
        android:layout_below="@+id/selectFriendsHeader"
        android:layout_above="@+id/createGroupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/createGroupButton"
        android:text="@string/create_group_button_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
