<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.richluick.nowyoudrink.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailField"
            android:hint="@string/email_hint"
            style="@style/AuthEditText">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_button_divider"/>

    <Button
        android:id="@+id/resetButton"
        android:text="@string/reset_password_button_label"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"
        style="@style/AuthButton"/>

    <Button
        android:id="@+id/cancelButton"
        android:text="@string/cancel_button_label"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"
        style="@style/AuthButton"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true" />

</RelativeLayout>
